@@ -128,6 +128,8 @@ version ?.??.?? (????-??-??):
   - enhancement: added post office property for addresses [chilan]
   - improvement: allow to select invoices between enabled, disabled and all as customer
     agreement for an electronic invoice [chilan]
+  - improvement: phpui.capitalize_customer_names configuration variable settings decides
+    if customer last names are automatically capitalized ('true' by default) [chilan]
 
 version 1.11.21 (2016-10-14):
 
